--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+html{
+  scroll-behavior: smooth;
+}
 :root{
  --red:red;
  --hover-bacground: rgb(175, 1, 1) ;
@@ -166,6 +169,21 @@ float: right;
 }
 
 /* hero- section-end */
+/* gotop-button-start */
+.gotopbtn{
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  background-color: rgb(240, 127, 127);
+  bottom: 30px;
+  right: 50px;
+  text-decoration: none;
+  text-align: center;
+  line-height: 50px;
+  color: #fff;
+}
+/* gotop-button-end */
+
 
 /* about-section-start */
 #about-us {
