--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,7 @@ html{
 
 /* hero- section-end */
 /* gotop-button-start */
-.gotopbtn{
+/* .gotopbtn{
   position: fixed;
   width: 50px;
   height: 50px;
@@ -169,6 +169,31 @@ html{
   text-align: center;
   line-height: 50px;
   color: #fff;
+} */
+.scrollup {
+
+  position: fixed;
+  width: 45px;
+  height: 45px;
+  background-color: rgb(240, 127, 127);
+  bottom: 30px;
+  right: 50px;
+  text-decoration: none;
+  text-align: center;
+  line-height: 50px;
+  color: #fff;
+  border-radius: 5px;
+}
+
+.scrollup i {
+  color:#fff;
+  font-size:20px;
+  /* line-height:33px; */
+
+}
+
+.scrollup:hover {
+  background: tomato;
 }
 /* gotop-button-end */
 
